snmp-exporter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snmp-exporter
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: snmp-exporter
  template:
    metadata:
      labels:
        app: snmp-exporter
    spec:
      containers:
        - name: snmp-exporter
          image: prom/snmp-exporter
          args:
            - "--config.file=/etc/snmp/snmp.yml"
          volumeMounts:
            - name: snmp-config-volume
              mountPath: /etc/snmp
      volumes:
        - name: snmp-config-volume
          configMap:
            name: snmp-exporter-config
