snmp-exporter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: snmp-exporter-service
  namespace: monitoring
spec:
  type: NodePort
  ports:
    - port: 9116
      targetPort: 9116
      nodePort: 30001
  selector:
    app: snmp-exporter
